<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sandro">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="381dp"
        android:layout_height="206dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/sandro" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/alex_sandro"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/cb"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textColor="@color/colorText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/LLnat"
        android:layout_below="@id/tvDescription">

        <TextView
            android:id="@+id/tvnat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nat"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvnat_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/nat_alex"
            android:textColor="@color/colorText"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:id="@+id/LLborn"
        android:layout_below="@id/LLnat">

        <TextView
            android:id="@+id/tvborn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/born"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvborn_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/born_alex"
            android:textColor="@color/colorText"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:id="@+id/LLheight"
        android:layout_below="@id/LLborn">

        <TextView
            android:id="@+id/tvheight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/height"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvheight_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/height_alex"
            android:textColor="@color/colorText"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:id="@+id/LLweight"
        android:layout_below="@id/LLheight">

        <TextView
            android:id="@+id/tvweight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/weight"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvweight_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/weight_alex"
            android:textColor="@color/colorText"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>